--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
 		</div>
 
 		<div class = "Project1">
+			<h1> Granular Flow of CAM-28 Particles down Rough Inclined Surfaces</h1>
+			<p> This project explores how height of granular flow down rough inclined surfaces can be determined optically from images of the flow.
+			<a href="https://rdatta31.github.io/determining-layer-height/"> <i>Read more</i> </a></p>
+		</div>
+
+		<div class = "Project1">
 			<h1> Predicting Cryptocurrency Prices from Google Trends Data</h1>
 			<p> This project explores the existence of a statistically significant relationship between Bitcoin prices and popularity of Google search terms. 
 			<a href="https://rdatta31.github.io/Cryptocurrency-Google-Trends/"> <i>Read more</i> </a></p>
