--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		</div>
 
 		<div class = "Project1">
-			<h1> Granular Flow of CAM-28 Particles down Rough Inclined Surfaces</h1>
+			<h1> Experimental Determination of Layer Height for Granular Flow</h1>
 			<p> This project explores how height of granular flow down rough inclined surfaces can be determined optically from images of the flow.
 			<a href="https://rdatta31.github.io/determining-layer-height/"> <i>Read more</i> </a></p>
 		</div>
