--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 		<div class = "top">
 			<h4> RISHABH DATTA </h4>
 			
-			<p class = "bio"> Rishabh Datta is a 4th Year Mechanical Engineering student at Georgia Tech, Atlanta. Rishabh is interested in Green Technology, Concentrated Solar Power, Renewable Energy, CFD and Data Science. He is drawn to challenges and loves working on novel projects and ideas. </p>
+			<p class = "bio"> Rishabh Datta is a 4th Year Mechanical Engineering student at Georgia Tech, Atlanta. Rishabh is interested in Green Technology, Concentrated Solar Power, Renewable Energy, CFD and Data Science. He is drawn to challenges and loves working on novel projects and ideas.</p>
+			<p class = "bio"> Click here for Rishabh's <a class ="resume" href="rdatta31.github.io/ResumeSpring2018 copy.pdf"> résumé</a></p>
 
 			<p align="center">
 				<a class = "icon" href="https://www.facebook.com/ryzus" ><img class = "logo" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/logos/fb.png" alt="facebook"/> </a>
@@ -31,6 +32,8 @@
 			alt = "Headshot"></>
 
 			<p class ="bioside"> Rishabh Datta is a 4th Year Mechanical Engineering student at Georgia Tech, Atlanta. Rishabh is interested in Green Technology, Concentrated Solar Power, Renewable Energy, CFD and Data Science. He is drawn to challenges and loves working on novel projects and ideas. </p>
+
+			<p class = "bio"> Click here for Rishabh's <a class ="resume" href="rdatta31.github.io/ResumeSpring2018 copy.pdf"> résumé</a></p>
 
 			<p>
 				<a class = "icon" href="https://www.facebook.com/ryzus" ><img class = "logo" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/logos/fb.png" alt="facebook"/> </a>
