--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
 		</div>
 
 		<div class = "Project1">
+			<h1> Measurement of Displacement of Laser during Flow using a RANSAC Algoithm</h1>
+			<p> This project uses a RANSAC algorithm to fit a second order curve to approximate a laser beam projected onto a surface during granular flow. The displacemnt of the laser beam is used to determine height of granular flow.
+			<a href="https://rdatta31.github.io/RANSAC-Method/"> <i>Read more</i> </a></p>
+		</div>
+
+		<div class = "Project1">
 			<h1> Experimental Determination of Layer Height for Granular Flow</h1>
 			<p> This project explores how height of granular flow down rough inclined surfaces can be determined optically from images of the flow.
 			<a href="https://rdatta31.github.io/determining-layer-height/"> <i>Read more</i> </a></p>
