--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		</div>
 
 		<div class = "Project1">
-			<h1> Measurement of Displacement of Laser during Flow using a RANSAC Algoithm</h1>
+			<h1> Measurement of Displacement of Laser during Flow using a RANSAC Algorithm</h1>
 			<p> This project uses a RANSAC algorithm to fit a second order curve to approximate a laser beam projected onto a surface during granular flow. The displacement of the laser beam is used to determine height of granular flow.
 			<a href="https://rdatta31.github.io/RANSAC-Method/"> <i>Read more</i> </a></p>
 		</div>
