--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 		<div class = "top">
 			<h4> RISHABH DATTA </h4>
 			
-			<p class = "bio"> Rishabh Datta is a 4th Year Mechanical Engineering student at Georgia Tech, Atlanta. Rishabh is interested in Green Technology, Concentrated Solar Power, Renewable Energy, CFD and Data Science. He is drawn to challenges and loves working on novel projects and ideas.</p>
-			<p class = "bio"> Click here for Rishabh's <a class ="resume" href="rdatta31.github.io/ResumeSpring2018 copy.pdf"> résumé</a></p>
+			<p class = "bio"> Rishabh Datta is a 4th Year Mechanical Engineering student at Georgia Tech, Atlanta. Rishabh is interested in Energy and Fluid Systems, CFD and renewable technologies. He is drawn to challenges and loves working on novel projects and ideas.</p>
+			<p class = "bio"> Click here for Rishabh's <a class ="resume" href="rdatta31.github.io/ResumeFall2019.pdf"> résumé</a></p>
 
 			<p align="center">
 				<a class = "icon" href="https://www.facebook.com/ryzus" ><img class = "logo" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/logos/fb.png" alt="facebook"/> </a>
@@ -31,7 +31,7 @@
 			<p align="center"><img class = "headshot" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/Headshotbw.jpg"
 			alt = "Headshot"></>
 
-			<p class ="bioside"> Rishabh Datta is a 4th Year Mechanical Engineering student at Georgia Tech, Atlanta. Rishabh is interested in Green Technology, Concentrated Solar Power, Renewable Energy, CFD and Data Science. He is drawn to challenges and loves working on novel projects and ideas. </p>
+			<p class ="bioside"> Rishabh Datta is a 4th Year Mechanical Engineering student at Georgia Tech, Atlanta. Rishabh is interested in Energy and Fluid Systems, CFD and renewable technologies. He is drawn to challenges and loves working on novel projects and ideas. </p>
 
 			<p class = "bio"> Click here for Rishabh's <a class ="resume" href="rdatta31.github.io/ResumeSpring2018 copy.pdf"> résumé</a></p>
 
@@ -46,6 +46,11 @@
 			</p>
 		</div>
 
+		<div class = "Project1">
+			<h1> Filtration and Disinfection of Water in Naturally Occurring Reservoirs </h1>
+			<p> This project explores how solid and microbial contaminants can be removed from water to make it safe for human consumption, for tribal communitie sin Marsabit, Kenya.
+			<a href="https://rdatta31.github.io/water-treatment/"> <i>Read more</i> </a></p>
+		</div>
 
 
 		<div class = "Project1">
@@ -66,11 +71,11 @@
 			<a href="https://rdatta31.github.io/determining-layer-height/"> <i>Read more</i> </a></p>
 		</div>
 
-		<div class = "Project1">
+		<!--<div class = "Project1">
 			<h1> Predicting Cryptocurrency Prices from Google Trends Data</h1>
 			<p> This project explores the existence of a statistically significant relationship between Bitcoin prices and popularity of Google search terms. 
 			<a href="https://rdatta31.github.io/Cryptocurrency-Google-Trends/"> <i>Read more</i> </a></p>
-		</div>
+		</div>-->
 
 		<div class = "Project1">
 			<h1> Exploring Challenges in Recycling Metallized Film</h1>
