--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<h4> RISHABH DATTA </h4>
 			
 			<p class = "bio"> Rishabh Datta is a 4th Year Mechanical Engineering student at Georgia Tech, Atlanta. Rishabh is interested in Energy and Fluid Systems, CFD and renewable technologies. He is drawn to challenges and loves working on novel projects and ideas.</p>
-			<p class = "bio"> Click here for Rishabh's <a class ="resume" href="rdatta31.github.io/ResumeFall2019.pdf"> résumé</a></p>
+			<p class = "bio"> Click here for Rishabh's <a class ="resume" href="https://rdatta31.github.io/ResumeFall2019.pdf"> résumé</a></p>
 
 			<p align="center">
 				<a class = "icon" href="https://www.facebook.com/ryzus" ><img class = "logo" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/logos/fb.png" alt="facebook"/> </a>
@@ -33,7 +33,7 @@
 
 			<p class ="bioside"> Rishabh Datta is a 4th Year Mechanical Engineering student at Georgia Tech, Atlanta. Rishabh is interested in Energy and Fluid Systems, CFD and renewable technologies. He is drawn to challenges and loves working on novel projects and ideas. </p>
 
-			<p class = "bio"> Click here for Rishabh's <a class ="resume" href="rdatta31.github.io/ResumeSpring2018 copy.pdf"> résumé</a></p>
+			<p class = "bio"> Click here for Rishabh's <a class ="resume" href="https://rdatta31.github.io/ResumeFall2019.pdf"> résumé</a></p>
 
 			<p>
 				<a class = "icon" href="https://www.facebook.com/ryzus" ><img class = "logo" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/logos/fb.png" alt="facebook"/> </a>
