--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
 			<a href="https://rdatta31.github.io/determining-layer-height/"> <i>Read more</i> </a></p>
 		</div>
 
-		<!--<div class = "Project1">
+		<div class = "Project1">
 			<h1> Predicting Cryptocurrency Prices from Google Trends Data</h1>
 			<p> This project explores the existence of a statistically significant relationship between Bitcoin prices and popularity of Google search terms. 
 			<a href="https://rdatta31.github.io/Cryptocurrency-Google-Trends/"> <i>Read more</i> </a></p>
-		</div>-->
+		</div>
 
 		<div class = "Project1">
 			<h1> Exploring Challenges in Recycling Metallized Film</h1>
