--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
 		</div>
 
 		<div class = "Project1">
+			<h1> Computing Volume Fractions of Cut Cells using Delaunay Triangulation </h1>
+			<p> This projects explores how triangulation can be used to compute cell face apertures, interface areas and cell volume for finite element analysis in CFD. 
+			<a href="https://rdatta31.github.io/delaunaytriangulation/"> <i>Read more</i> </a></p>
+		</div>
+
+		<div class = "Project1">
 			<h1> Filtration and Disinfection of Water in Naturally Occurring Reservoirs </h1>
 			<p> This project explores how solid and microbial contaminants can be removed from water to make it safe for human consumption, for tribal communities in Marsabit, Kenya.
 			<a href="https://rdatta31.github.io/water-treatment/"> <i>Read more</i> </a></p>
