--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		</div>
 
 		<div class = "Project1">
-			<h1> Computing Volume Fractions of Cut Cells using Delaunay Triangulation </h1>
+			<h1> Levelset Based Geometry Reconstruction for a Compressible Multiphase Solver  </h1>
 			<p> This projects explores how triangulation can be used to compute cell face apertures, interface areas and cell volume for finite element analysis in CFD. 
 			<a href="https://rdatta31.github.io/DelaunayTriangulation/"> <i>Read more</i> </a></p>
 		</div>
