--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
 		</div>
 
 		<div class = "Project1">
+			<h1> Iterative Riemann Solver for Interface Interaction in Compressible Multiphase Flows  </h1>
+			<p> This projects explores interface velocity and pressures can be determined for compressible inviscid flow involving two phases.
+			<a href="https://rdatta31.github.io/multiphase-flow/"> <i>Read more</i> </a></p>
+		</div>
+
+		<div class = "Project1">
 			<h1> Filtration and Disinfection of Water in Naturally Occurring Reservoirs </h1>
 			<p> This project explores how solid and microbial contaminants can be removed from water to make it safe for human consumption, for tribal communities in Marsabit, Kenya.
 			<a href="https://rdatta31.github.io/water-treatment/"> <i>Read more</i> </a></p>
