--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<div class = "top">
 			<h4> RISHABH DATTA </h4>
 			
-			<p class = "bio"> Rishabh Datta is a 4th Year Mechanical Engineering student at Georgia Tech, Atlanta. Rishabh is interested in Energy and Fluid Systems, CFD and renewable technologies. He is drawn to challenges and loves working on novel projects and ideas.</p>
+			<p class = "bio"> Rishabh Datta is a graduate student in Mechanical Engineering at Massachusetts Institute of Technology. Rishabh is interested in heat transfer, fluid mechanics, energy systems and transport. </p>
 			<p class = "bio"> Click here for Rishabh's <a class ="resume" href="https://rdatta31.github.io/ResumeFall2019.pdf"> résumé</a></p>
 
 			<p align="center">
@@ -31,7 +31,7 @@
 			<p align="center"><img class = "headshot" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/Headshotbw.jpg"
 			alt = "Headshot"></>
 
-			<p class ="bioside"> Rishabh Datta is a 4th Year Mechanical Engineering student at Georgia Tech, Atlanta. Rishabh is interested in Energy and Fluid Systems, CFD and renewable technologies. He is drawn to challenges and loves working on novel projects and ideas. </p>
+			<p class ="bioside"> Rishabh Datta is a graduate student in Mechanical Engineering at Massachusetts Institute of Technology. Rishabh is interested in heat transfer, fluid mechanics, energy systems and transport. </p>
 
 			<p class = "bio"> Click here for Rishabh's <a class ="resume" href="https://rdatta31.github.io/ResumeFall2019.pdf"> résumé</a></p>
 
