--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 				<a class = "icon" href="https://www.linkedin.com/in/rishabh-datta-90a43820/" ><img class = "logo" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/logos/linkedin.png" alt="linkedin"/> </a>
 
-				<a class = "icon" href="mailto:rishabh.datta@gatech.edu" ><img class = "logo" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/logos/email.png" alt="email"/> 
+				<a class = "icon" href="mailto:rdatta@mit.edu" ><img class = "logo" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/logos/email.png" alt="email"/> 
 				</a>
 				
 			</p>
@@ -40,7 +40,7 @@
 
 				<a class = "icon" href="https://www.linkedin.com/in/rishabh-datta-90a43820/" ><img class = "logo" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/logos/linkedin.png" alt="linkedin"/> </a>
 
-				<a class = "icon" href="mailto:rishabh.datta@gatech.edu" ><img class = "logo" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/logos/email.png" alt="email"/> 
+				<a class = "icon" href="mailto:rdatta@mit.edu" ><img class = "logo" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/logos/email.png" alt="email"/> 
 				</a>
 				
 			</p>
