--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 		<div class = "top">
 			<h4> RISHABH DATTA </h4>
 			
-			<p class = "bio"> Rishabh Datta is a graduate student in Mechanical Engineering at Massachusetts Institute of Technology. Rishabh is interested in heat transfer, fluid mechanics, energy systems and transport. </p>
-			<p class = "bio"> Click here for Rishabh's <a class ="resume" href="https://rdatta31.github.io/ResumeFall2019.pdf"> résumé</a></p>
+			<p class = "bio"> Rishabh Datta is a graduate student in Mechanical Engineering at Massachusetts Institute of Technology. Rishabh is interested in heat transfer, fluid mechanics, energy systems and transport. Rishabh is also interested in Sustainability, and is a co-char for MIT's Graduate Student Council Sustainability. </p>
+			<p class = "bio"> Click here for Rishabh's <a class ="resume" href="https://rdatta31.github.io/Resume.pdf"> résumé</a></p>
 
 			<p align="center">
 				<a class = "icon" href="https://www.facebook.com/ryzus" ><img class = "logo" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/logos/fb.png" alt="facebook"/> </a>
@@ -31,9 +31,9 @@
 			<p align="center"><img class = "headshot" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/Headshotbw.jpg"
 			alt = "Headshot"></>
 
-			<p class ="bioside"> Rishabh Datta is a graduate student in Mechanical Engineering at Massachusetts Institute of Technology. Rishabh is interested in heat transfer, fluid mechanics, energy systems and transport. </p>
+			<p class ="bioside"> Rishabh Datta is a graduate student in Mechanical Engineering at Massachusetts Institute of Technology. Rishabh is interested in heat transfer, fluid mechanics, energy systems and transport.Rishabh is also interested in Sustainability, and is a co-char for MIT's Graduate Student Council Sustainability. </p>
 
-			<p class = "bio"> Click here for Rishabh's <a class ="resume" href="https://rdatta31.github.io/ResumeFall2019.pdf"> résumé</a></p>
+			<p class = "bio"> Click here for Rishabh's <a class ="resume" href="https://rdatta31.github.io/Resume.pdf"> résumé</a></p>
 
 			<p>
 				<a class = "icon" href="https://www.facebook.com/ryzus" ><img class = "logo" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/logos/fb.png" alt="facebook"/> </a>
@@ -59,20 +59,13 @@
 		</div>
 
 		<div class = "Project1">
-			<h1> Filtration and Disinfection of Water in Naturally Occurring Reservoirs </h1>
-			<p> This project explores how solid and microbial contaminants can be removed from water to make it safe for human consumption, for tribal communities in Marsabit, Kenya.
-			<a href="https://rdatta31.github.io/water-treatment/"> <i>Read more</i> </a></p>
-		</div>
-
-
-		<div class = "Project1">
 			<h1> Granular Flow of CAM-28 Particles down Rough Inclined Surfaces</h1>
 			<p> This project explores how CAM-28 particles behave as they flow down rough inclined surfaces. 
 			<a href="https://rdatta31.github.io/granular-flow/"> <i>Read more</i> </a></p>
 		</div>
 
 		<div class = "Project1">
-			<h1> Measurement of Displacement of Laser during Flow using a RANSAC Algorithm</h1>
+			<h1> Measurement of Displacement of Laser Sheet during Flow using a RANSAC Algorithm</h1>
 			<p> This project uses a RANSAC algorithm to fit a second order curve to approximate a laser beam projected onto a surface during granular flow. The displacement of the laser beam is used to determine height of granular flow.
 			<a href="https://rdatta31.github.io/RANSAC-Method/"> <i>Read more</i> </a></p>
 		</div>
@@ -82,25 +75,12 @@
 			<p> This project explores how height of granular flow down rough inclined surfaces can be determined optically from images of the flow.
 			<a href="https://rdatta31.github.io/determining-layer-height/"> <i>Read more</i> </a></p>
 		</div>
-
-		<div class = "Project1">
-			<h1> Predicting Cryptocurrency Prices from Google Trends Data</h1>
-			<p> This project explores the existence of a statistically significant relationship between Bitcoin prices and popularity of Google search terms. 
-			<a href="https://rdatta31.github.io/Cryptocurrency-Google-Trends/"> <i>Read more</i> </a></p>
+	
+	<div class = "NewText">
+			<p> 
+			<a href="https://rdatta31.github.io/archive/"> <i>Archive/i> </a></p>
 		</div>
 
-		<div class = "Project1">
-			<h1> Exploring Challenges in Recycling Metallized Film</h1>
-			<p> Non-Biodegradable metallized film is a major waste management challenge in developing countries. This project the characteristics of metallized film, and uses these to redefine how metallized film can be recycled.
-			<a href="https://rdatta31.github.io/Metallized-Film/"> <i>Read more</i> </a></p>
-		</div>
-
-
-		<div class = "Project1">
-			<h1> Fighting Parasitic Infection in Marsabit, Kenya</h1>
-			<p> This project aims to develop a sustainable approach to solving a major healthcare issue among the tribes in Marsabit, Kenya. 
-			<a href="https://rdatta31.github.io/Shoes-For-Marsabit/"> <i>Read more</i> </a></p>
-		</div>
 
 	</body>
 	</html>
