--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 		</div>
 	
 	<div class = "NewText">
-			<p> 
+			<p> Click here for more projects:
 			<a href="https://rdatta31.github.io/archive/"> <i>Archive/i> </a></p>
 		</div>
 
