--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			<a href="https://rdatta31.github.io/determining-layer-height/"> <i>Read more</i> </a></p>
 		</div>
 	
-	<div class = "NewText">
+	<div class = "Project1">
 			<p> Click here for more projects:
 			<a href="https://rdatta31.github.io/archive/"> <i>Archive/i> </a></p>
 		</div>
