--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<p align="center"><img class = "headshot" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/Headshotbw.jpg"
 			alt = "Headshot"></>
 
-			<p class ="bioside"> Rishabh Datta is a graduate student in Mechanical Engineering at Massachusetts Institute of Technology. Rishabh is interested in heat transfer, fluid mechanics, energy systems and transport.Rishabh is also interested in Sustainability, and is a co-char for MIT's Graduate Student Council Sustainability. </p>
+			<p class ="bioside"> Rishabh Datta is a graduate student in Mechanical Engineering at Massachusetts Institute of Technology. Rishabh is interested in heat transfer, fluid mechanics, energy systems and transport. Rishabh is also interested in Sustainability, and is a co-char for MIT's Graduate Student Council Sustainability. </p>
 
 			<p class = "bio"> Click here for Rishabh's <a class ="resume" href="https://rdatta31.github.io/Resume.pdf"> résumé</a></p>
 
@@ -78,7 +78,7 @@
 	
 		<div class = "NewText">
 			<p> Click here for more projects:
-			<a href="https://rdatta31.github.io/archive/"> <i>Archive/i> </a></p>
+			<a href="https://rdatta31.github.io/archive/"> <i>Archive</i> </a></p>
 		</div>
 
 
