--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 			<p class ="bioside"> Rishabh Datta is a graduate student in Mechanical Engineering at Massachusetts Institute of Technology. Rishabh is interested in heat transfer, fluid mechanics, energy systems and transport. Rishabh is also interested in Sustainability, and is a co-char for MIT's Graduate Student Council Sustainability. </p>
 
-			<p class = "bio"> Click here for Rishabh's <a class ="resume" href="https://rdatta31.github.io/Resume.pdf"> résumé</a></p>
+			<p class = "bio"> Click here for Rishabh's <a class ="resume" href="https://rdatta31.github.io/Resume2019.pdf"> résumé</a></p>
 
 			<p>
 				<a class = "icon" href="https://www.facebook.com/ryzus" ><img class = "logo" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/logos/fb.png" alt="facebook"/> </a>
