--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
 		<div class = "top">
 			<h4> RISHABH DATTA </h4>
-			<p class= "menu"> News | Publications | Projects </p>
+			<p class= "menu"> News <a href="https://rdatta31.github.io/"> <i>Archive</i> </a> |
+			 Publications <a href="https://rdatta31.github.io/publications/"> <i>Archive</i> </a> |
+			 Projects <a href="https://rdatta31.github.io/projects/"> <i>Archive</i> </a> </p>
 			
 			<p class = "bio"> Rishabh Datta is a PhD candidate in the department of Mechanical Engineering at Massachusetts Institute of Technology. As a research assistant at MIT's Plasma Science & Fusion Center, Rishabh works on high-energy-density pulsed-power driven plasmas. His areas of focus are magnetized shocks and radiatively-cooled magnetic reconnection.
 			 </p>
@@ -39,7 +41,9 @@
 
 
 			<h4> RISHABH DATTA </h4>
-			<p class= "menu"> News | Publications | Projects </p>
+			<p class= "menu"> News <a href="https://rdatta31.github.io/"> <i>Archive</i> </a> |
+			 Publications <a href="https://rdatta31.github.io/publications/"> <i>Archive</i> </a> |
+			 Projects <a href="https://rdatta31.github.io/projects/"> <i>Archive</i> </a> </p>
 			<p align="center"><img class = "headshot" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/headhot2022.jpg"
 			alt = "Headshot"></>
 
