--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 		<div class = "top">
 			<h4> RISHABH DATTA </h4>
 			<p class= "menu"> <a href="https://rdatta31.github.io/"> News </a> |
-			  <a href="https://rdatta31.github.io/publications/"> Publications </a> |
-			  <a href="https://rdatta31.github.io/projects/"> Projects </a> </p>
+			  <a href="https://rdatta31.github.io/publications.html"> Publications </a> |
+			  <a href="https://rdatta31.github.io/projects.html"> Projects </a> </p>
 			
 			<p class = "bio"> Rishabh Datta is a PhD candidate in the department of Mechanical Engineering at Massachusetts Institute of Technology. As a research assistant at MIT's Plasma Science & Fusion Center, Rishabh works on high-energy-density pulsed-power driven plasmas. His areas of focus are magnetized shocks and radiatively-cooled magnetic reconnection.
 			 </p>
@@ -42,8 +42,8 @@
 
 			<h4> RISHABH DATTA </h4>
 			<p class= "menu"> <a href="https://rdatta31.github.io/"> News </a> |
-			  <a href="https://rdatta31.github.io/publications/"> Publications </a> |
-			  <a href="https://rdatta31.github.io/projects/"> Projects </a> </p>
+			  <a href="https://rdatta31.github.io/publications.html"> Publications </a> |
+			  <a href="https://rdatta31.github.io/projects.html"> Projects </a> </p>
 			<p align="center"><img class = "headshot" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/headhot2022.jpg"
 			alt = "Headshot"></>
 
