--- a/projects.html
+++ b/projects.html
@@ -98,7 +98,7 @@
 			<h1>Resistive Magnetohydrodynamic Simulations</h1>
 			
 			<p>We run resitive MHD simulations using GORGON to model a variety of physics,
-			 including radiative-cooling and guide field effect in reconnection expeirments, planar wire arrays, and bow shocks.</p>
+			 including radiative-cooling and guide field effect in reconnection experiments, planar wire arrays, and bow shocks.</p>
 			
 		</div>
 		
@@ -107,7 +107,7 @@
 			<h1>Radiation Transport Modeling</h1>
 			
 			<p>Radiation transport modeling is necessary for interpreting visible or X-ray spectrosocpy data. 
-			Our radiation transport solver, which uses emissivity and opacity data computed using PrismSPECT or SCRAM, can be used to generate synthetci spectroscopic data.  </p>
+			Our radiation transport solver, which uses emissivity and opacity data computed using PrismSPECT or SCRAM, can be used to generate synthetic spectroscopic data.  </p>
 			
 		</div>
 		
@@ -120,7 +120,7 @@
 			<h1>Spectroscopy Analysis using Machine Learning</h1>
 			
 			<p>Spectroscopy analysis can be time-consuming and computationally expensive for large datasets.
-			Using machine learning, we can significanly reduce the time required to analyze spectroscopy data with a loss in accuracy.</p>
+			Using machine learning, we can significanly reduce the time required to analyze spectroscopy data without a loss in prediction accuracy.</p>
 			
 		</div>
 		
@@ -128,7 +128,7 @@
 			
 			<h1>Tomographic Reconstruction in Pulsed-Power Plasmas</h1>
 			
-			<p>Commonly-used plasma diagnostics, such as interferometry or laser imaging, provide line-integrated views of the plasma along limited lines of sight.
+			<p>Commonly-used plasma diagnostics, such as interferometry or self-emission imaging, provide line-integrated views of the plasma along limited lines of sight.
 			Using tomography, we can reconstruct the 3D structure of reconnection layers, z-pinches, and shocks.</p>
 			
 		</div>
