--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
 		
 		<div class = "Project1">
 			<h1> News </h1>
+			<p> <b>Feb 2024 (Paper)</b>
+				</a>  Preprint on radiatively-cooled magnetic reconnection experiments on the Z machine (submitted as an invited paper to Phys. Plasmas) now available.
+			<a href="https://arxiv.org/abs/2401.17923"> [paper] </a></p>
 			<p> <b>Jan 2024 (Paper)</b>
 				</a>  Preprint of our paper on radiatively-cooled magnetic reconnection (submitted to Phys. Rev. Lett.) now available.
 			<a href="https://doi.org/10.48550/arXiv.2401.04643"> [paper] </a></p>
