--- a/publications.html
+++ b/publications.html
@@ -64,7 +64,7 @@
 		
 		<div class="Project1">
 			<h1>Publications</h1>
-			<p> 8. <b> Datta, R. </b>, Crilly, A., Hansen, S., et al. (2024). Radiatively-cooled magnetic reconnection experiments driven by pulsed power.  Phys. Plasmas. Invited Paper (In Review). </p> <a href="https://arxiv.org/abs/2401.17923">[link]</a></p>
+			<p> 8. <b> Datta, R. </b>, Chandler, K., Myers, C. E., et al. (2024). Radiatively-cooled magnetic reconnection experiments driven by pulsed power.  Phys. Plasmas. Invited Paper (In Review). </p> <a href="https://arxiv.org/abs/2401.17923">[link]</a></p>
 
 			<p>7. <b> Datta, R. </b>, Crilly, A., Hansen, S., et al. (2024). Plasmoid formation and strong radiative cooling in a driven magnetic reconnection experiment.  Phys. Rev. Lett. (In Review). <a href="https://doi.org/10.48550/arXiv.2401.04643">[link]</a></p>
 
