--- a/publications.html
+++ b/publications.html
@@ -24,7 +24,7 @@
 			  <a href="https://rdatta31.github.io/projects.html">Projects</a> </p>
 			
 			
-			<p class = "bio"> Rishabh Datta is a PhD candidate in the department of Mechanical Engineering at Massachusetts Institute of Technology. As a research assistant at MIT's Plasma Science & Fusion Center, Rishabh works on high-energy-density pulsed-power driven plasmas. His areas of focus are magnetized shocks and radiatively-cooled magnetic reconnection.
+			<p class = "bio"> Rishabh Datta is a PhD candidate in the department of Mechanical Engineering at Massachusetts Institute of Technology. As a research assistant at MIT's Plasma Science & Fusion Center, Rishabh works on high-energy-density pulsed-power driven plasmas. His areas of focus are magnetized shocks and radiatively-cooled magnetic reconnection. <a href="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/202402_CV.pdf"> Click here for Rishabh's CV. </a>
 			 </p>
 
 			<p align="center">
@@ -48,7 +48,7 @@
 			<p align="center"><img class = "headshot" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/headhot2022.jpg"
 			alt = "Headshot"></>
 
-			<p class ="bioside"> Rishabh Datta is a PhD candidate in the department of Mechanical Engineering at Massachusetts Institute of Technology. As a research assistant at MIT's Plasma Science & Fusion Center, Rishabh works on high-energy-density pulsed-power driven plasmas. His areas of focus are magnetized shocks and radiatively-cooled magnetic reconnection. </p>
+			<p class ="bioside"> Rishabh Datta is a PhD candidate in the department of Mechanical Engineering at Massachusetts Institute of Technology. As a research assistant at MIT's Plasma Science & Fusion Center, Rishabh works on high-energy-density pulsed-power driven plasmas. His areas of focus are magnetized shocks and radiatively-cooled magnetic reconnection. <a href="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/202402_CV.pdf"> Click here for Rishabh's CV. </a> </p>
 		
 
 			<p>
