--- a/publications.html
+++ b/publications.html
@@ -19,7 +19,7 @@
 
 		<div class = "top">
 			<h4> RISHABH DATTA </h4>
-			<p class= "menu"> <a href="https://rdatta31.github.io/">News</a> |
+			<p class= "menu">Navigation: <a href="https://rdatta31.github.io/">News</a>|
 			  <a href="https://rdatta31.github.io/publications.html">Publications</a> |
 			  <a href="https://rdatta31.github.io/projects.html">Projects</a> </p>
 			
@@ -42,7 +42,7 @@
 
 
 			<h4> RISHABH DATTA </h4>
-			<p class= "menu"> <a href="https://rdatta31.github.io/">News</a> |
+			<p class= "menu">Navigation: <a href="https://rdatta31.github.io/">News</a> |
 			  <a href="https://rdatta31.github.io/publications.html">Publications</a> |
 			  <a href="https://rdatta31.github.io/projects.html">Projects</a> </p>
 			<p align="center"><img class = "headshot" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/headhot2022.jpg"
