--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
 		
 		<div class = "Project1">
 			<h1> News </h1>
+			p> <b>Sep 2023 (Paper):</b></a>  Paper on spectroscopy analysis using machine learning published in IEEE T. Plasma Science.
+			<a>https://doi.org/10.1109/tps.2024.3364975 [paper]</a>
+			<a href="https://doi.org/10.48550/arXiv.2308.16828"> [arxiv] </a></p>
 			<p> <b>Feb 2024 (Paper)</b>
 				</a>  Preprint on radiatively-cooled magnetic reconnection experiments on the Z machine (submitted as an invited paper to Phys. Plasmas) now available.
 			<a href="https://arxiv.org/abs/2401.17923"> [paper] </a></p>
