--- a/publications.html
+++ b/publications.html
@@ -70,7 +70,7 @@
 
 <p>6. <b> Datta, R. </b>, Crilly, A., Chittenden, J., et al. (2024). Simulations of radiatively cooled magnetic reconnection driven by pulsed-power. Journal Plasma Phys. (In Review). <a href="https://doi.org/10.48550/arXiv.2401.01795">[link]</a></p>
 
-<p>5. <b> Datta, R. </b>, Faez, A., Hare, J.D.  (2023). Machine learning assisted analysis of visible spectroscopy in pulsed-power-driven plasmas. IEEE Transactions on Plasma Science (In Review). <a href="https://doi.org/10.48550/arXiv.2308.16828">[link]</a></p>
+<p>5. <b> Datta, R. </b>, Faez, A., Hare, J.D.  (2023). Machine learning assisted analysis of visible spectroscopy in pulsed-power-driven plasmas. IEEE Transactions on Plasma Science. <a href="https://doi.org/10.1109/tps.2024.3364975">[link]</a><a href="https://doi.org/10.48550/arXiv.2308.16828">[arxiv]</a></p>
 
 <p>4. <b> Datta, R. </b>, Angel, J., Greenly, J.B. , et al. (2023). Plasma flows during the ablation stage of an over-massed pulsed-power-driven planar wire array. Phys. Plasmas 30, 092104. <a href="https://doi.org/10.1063/5.0160893">[link]</a></p>
 
