--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
 		
 		<div class = "Project1">
 			<h1> News </h1>
+			<p> <b>April 2024 (Paper):</b>
+				</a>  My paper radiative cooling in magnetic reconnection was highlighted in <u>Physical Review Letters as an Editors' Suggestion</u>. "Only about one Letter in six is highlighted as a Suggestion
+				due to its particular importance, innovation, and broad appeal."
+			<a href="https://doi.org/10.1103/physrevlett.132.155102 "> [paper] </a>
+			<a href="https://doi.org/10.48550/arXiv.2401.04643"> [arxiv] </a></p>
 			<p> <b>Feb 2024 (Paper):</b></a>  Paper on spectroscopy analysis using machine learning published in IEEE T. Plasma Science.
 			<a href="https://doi.org/10.1109/tps.2024.3364975"> [paper] </a>
 			<a href="https://doi.org/10.48550/arXiv.2308.16828"> [arxiv] </a></p>
@@ -76,16 +81,16 @@
 			<a href="https://doi.org/10.48550/arXiv.2401.01795"> [paper] </a></p>
 			<p> <b>Dec 2024 (Award):</b>  My proposal to characterize adiabatic index in magnetized HED plasmas was funded through the ZNetUS program.
 			 The adiabatic index is important for shock compression in inertial confinement fusion. </p>
-			 <p> <b>Nov 2023 (Talk):</b>  Invited talk on radiatively-cooled magnetic reconnection at APS DPP Meeting, Denver, CO. <a href="https://drive.google.com/file/d/1ERC12eiL19neBh-_XxWO6OwRnmP9Jsg-/view?usp=sharing">[video]</a>  </p>
+			 <p> <b>Nov 2023 (Talk):</b>  <u>Invited talk</u> on radiatively-cooled magnetic reconnection at <u>APS Division of Plasma Physics Meeting, Denver, CO</u>. <a href="https://drive.google.com/file/d/1ERC12eiL19neBh-_XxWO6OwRnmP9Jsg-/view?usp=sharing">[video]</a>  </p>
 			 <p> <b>Sep 2023 (Paper):</b></a>  Preprint of paper on spectroscopy analysis using machine learning (submitted to IEEE T. Plasma Science) now available.
 			<a href="https://doi.org/10.48550/arXiv.2308.16828"> [paper] </a></p>
 			<p> <b>Sep 2023 (Paper):</b></a>  Paper on pulsed-power-driven planar wire arrays was published in Phys. Plasmas. 
 			<a href="https://doi.org/10.1063/5.0160893"> [paper] </a></p>
-			 <p> <b>Aug 2023 (Talk):</b>  Plenary talk on magnetic reconnection experimental results at the Z Fundamental Science Workshop. </p>
+			 <p> <b>Aug 2023 (Talk):</b>  <u>Plenary talk</u> on magnetic reconnection experimental results at the Z Fundamental Science Workshop. </p>
 			 <p> <b>Jul 2023 (Talk):</b>  Contributed talk at the Dense Z Pinch conference (DZP), Ann Arbor, MI. </p>
 			 <p> <b>Jun 2023 (Talk):</b>  Contributed talk at the International Magnetic Reconnection Workshop, Japan. </p>
-			 <p> <b>May 2023 (Award):</b> Awarded the 2023 College of Engineering Exponent Fellowship.</p>
-			 <p> <b>May 2023 (Award):</b> Awarded the 2023 Wunsch Foundation Silent Hoist and Crane Outstanding Student Award.</p>
+			 <p> <b>May 2023 (Award):</b> Awarded the <u>2023 College of Engineering Exponent Fellowship.</u></p>
+			 <p> <b>May 2023 (Award):</b> Awarded the <u>2023 Wunsch Foundation Silent Hoist and Crane Outstanding Student Award.</u></p>
 			 <p> <b>May 2023 (Award):</b>  Awarded Runner-up for best student paper at International Conference of Plasma Science (ICOPS), Santa Fe, NM. </p>
 			 <p> <b>Apr 2023 (News):</b> My research on laboratory astrophysics featured on MIT news.
 			 <a href="https://news.mit.edu/2023/exploring-bow-shock-beyond-rishabh-datta-0424"> [article] </a></p>
