--- a/publications.html
+++ b/publications.html
@@ -64,21 +64,25 @@
 		
 		<div class="Project1">
 			<h1>Publications</h1>
-			<p> 8. <b> Datta, R. </b>, Chandler, K., Myers, C. E., et al. (2024). Radiatively-cooled magnetic reconnection experiments driven by pulsed power.  Phys. Plasmas. (In Review). <a href="https://arxiv.org/abs/2401.17923">[link]</a></p>
+			<p> [8] <b> R. Datta </b>, K. Chandler, C. E. Myers, J. P. Chittenden, A. J. Crilly, C. Aragon, D. J. Ampleford,  J. T. Banasek, A. Edens, W. R. Fox, S. B. Hansen, E. C. Harding, C. A. Jennings, H. Ji, C. C. Kuranz, S. V. Lebedev, Q. Looker, S. G. Patel, A. Porwitzky, G. A. Shipley, D. A. Uzdensky, D. A. Yager-Elorriaga, J.D. Hare (2024).  “Plasmoid Formation and Strong Radiative Cooling in a Driven Magnetic Reconnection Experiment.” <a href="https://doi.org/10.1103/physrevlett.132.155102">Physical Review Letters. Editor’s Suggestion. </a> </p>
+			
+			<p>[7] <b> R. Datta </b>, K. Chandler, C. E. Myers, J. P. Chittenden, A. J. Crilly, C. Aragon, D. J. Ampleford,  J. T. Banasek, A. Edens, W. R. Fox, S. B. Hansen, E. C. Harding, C. A. Jennings, H. Ji, C. C. Kuranz, S. V. Lebedev, Q. Looker, S. G. Patel, A. Porwitzky, G. A. Shipley, D. A. Uzdensky, D. A. Yager-Elorriaga, J.D. Hare (2024).  “Radiatively cooled magnetic reconnection experiments driven by pulsed power.” <a href="https://doi.org/10.48550/arXiv.2401.17923"> Physics of Plasmas. Invited Paper. (In Review). </a> </p>
+			
+			<p> [6] <b> R. Datta </b>, A. J. Crilly, J. P. Chittenden, S. Chowdhry, K. Chandler, N. Chaturvedi, C. E. Myers, W. R. Fox, S. B. Hansen, C. A. Jennings, H. Ji, C. C. Kuranz, S. V. Lebedev, D. A. Uzdensky, J. D. Hare (2024). “Simulations of radiatively cooled magnetic reconnection driven by pulsed-power.” <a href="https://doi.org/10.48550/arXiv.2401.01795"> Journal of Plasma Physics (Accepted). </a> </p>
+			
+			<p>[5] Datta, R., Ahmed F., Hare, J.D. (2023)  “Machine learning assisted analysis of visible spectroscopy in pulsed-power-driven plasmas.”<a href="https://doi.org/10.1109/TPS.2024.3364975"> IEEE Transactions on Plasma Science. </a> </p>
 
-			<p>7. <b> Datta, R. </b>, Chandler, K., Myers, C. E., et al. (2024). Plasmoid formation and strong radiative cooling in a driven magnetic reconnection experiment.  Phys. Rev. Lett. (In Review). <a href="https://doi.org/10.48550/arXiv.2401.04643">[link]</a></p>
 
-<p>6. <b> Datta, R. </b>, Crilly, A., Chittenden, J., et al. (2024). Simulations of radiatively cooled magnetic reconnection driven by pulsed-power. Journal Plasma Phys. (In Review). <a href="https://doi.org/10.48550/arXiv.2401.01795">[link]</a></p>
+			<p>[4] <b> R. Datta </b>, J. Angel, J. B. Greenly, S. N. Bland, J. P. Chittenden, E. S. Lavine, W. M. Potter D. Robinson, T. W. O. Varnish, E. Wong, D. A. Hammer, B. R. Kusse, J. D. Hare. "Plasma flows during the ablation stage of an over-massed pulsed-power-driven exploding planar wire array." <a href="https://doi.org/10.1063/5.0160893"> Physics of Plasmas 30, no. 9 (2023). </a>  </p>
 
-<p>5. <b> Datta, R. </b>, Faez, A., Hare, J.D.  (2023). Machine learning assisted analysis of visible spectroscopy in pulsed-power-driven plasmas. IEEE Transactions on Plasma Science. <a href="https://doi.org/10.1109/tps.2024.3364975">[link]</a><a href="https://doi.org/10.48550/arXiv.2308.16828">[arxiv]</a></p>
+			<p> [3] <b> R. Datta </b>, D.R. Russell, I. Tang, T. Clayson, L.G. Suttle, J.P. Chittenden, S.V. Lebedev, and J.D. Hare. “The Structure of 3-D Collisional Magnetized Bow Shocks in Pulsed-Power-Driven Plasma Flows.” <a href= "https://doi.org/10.1017/S0022377822001118"> Journal of Plasma Physics 88, no. 6 (2022): 905880604. </a>  </p>
 
-<p>4. <b> Datta, R. </b>, Angel, J., Greenly, J.B. , et al. (2023). Plasma flows during the ablation stage of an over-massed pulsed-power-driven planar wire array. Phys. Plasmas 30, 092104. <a href="https://doi.org/10.1063/5.0160893">[link]</a></p>
 
-<p>3. <b> Datta, R. </b>, Russell, D. R., Tang, I., Clayson, T., et al. (2022). The structure of 3-D collisional magnetized bow shocks in pulsed-power-driven plasma flows. Journal Plasma Phys., 88(6), 905880604. <a href="https://doi.org/10.1017/S0022377822001118">[link]</a></p>
+			<p> [2] <b> R. Datta </b>, D. R. Russell, I. Tang, T. Clayson, L. G. Suttle, J. P. Chittenden, S. V. Lebedev, and J. D. Hare. “Time-Resolved Velocity and Ion Sound Speed Measurements from Simultaneous Bow Shock Imaging and Inductive Probe Measurements.” <a href="https://doi.org/10.1063/5.0098823."> Review of Scientific Instruments 93, no. 10 (2022): 103530.</a>  </p>
 
-<p>2. <b> Datta, R. </b>, Russell, D. R., Tang, I., Clayson, et al. (2022) Time-resolved velocity and ion sound speed measurements from simultaneous bow shock imaging and inductive probe measurements. Rev. Sci. Instrum., 93(10), 103530. <a href="https://doi.org/10.1063/5.0098823">[link]</a></p>
 
-<p>1. Bush, H. E., <b> Datta, R. </b>, & Loutzenhiser, P. G. (2019). Aluminum-doped strontium ferrites for a two-step solar thermochemical air separation cycle: Thermodynamic characterization and cycle analysis. Solar Energy, 188, 775-786. <a href="https://doi.org/10.1016/j.solener.2019.06.059">[link]</a></p>
+			<p> [1] H. E. Bush, <b> R. Datta </b>, and P. G. Loutzenhiser. "Aluminum-doped strontium ferrites for a two-step solar thermochemical air separation cycle: Thermodynamic characterization and cycle analysis." <a href="https://doi.org/10.1016/j.solener.2019.06.059"> Solar Energy 188 (2019): 775-786. </a>  </p>
+
 
 		</div>
 
