--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
 		
 		<div class = "Project1">
 			<h1> News </h1>
+			<p> <b>April 2024 (News):</b>
+				</a>  My work on radiatively cooled magnetic reconnection was featured as a Research Highlight in <u>Nature Astronomy.</u>
+			<a href="https://www.nature.com/articles/s41550-024-02264-1"> [link] </a>
 			<p> <b>April 2024 (Paper):</b>
 				</a>  My paper radiative cooling in magnetic reconnection was highlighted in <u>Physical Review Letters as an Editors' Suggestion</u>. "Only about one Letter in six is highlighted as a Suggestion
 				due to its particular importance, innovation, and broad appeal."
