--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			  <a href="https://rdatta31.github.io/publications.html">Publications</a> |
 			  <a href="https://rdatta31.github.io/projects.html">Projects</a> </p>
 			
-			<p class = "bio"> Rishabh Datta is a PhD candidate in the department of Mechanical Engineering at Massachusetts Institute of Technology. As a research assistant at MIT's Plasma Science & Fusion Center, Rishabh works on high-energy-density pulsed-power driven plasmas. His areas of focus are magnetized shocks and radiatively-cooled magnetic reconnection. <a href="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/202402_CV.pdf"> Click here for Rishabh's CV. </a></p>
+			<p class = "bio"> Rishabh Datta is a PhD candidate in the department of Mechanical Engineering at Massachusetts Institute of Technology. As a research assistant at MIT's Plasma Science & Fusion Center, Rishabh works on high-energy-density pulsed-power driven plasmas. His areas of focus are magnetized shocks and radiatively-cooled magnetic reconnection. <a href="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/CV.pdf" target="_blank"> Click here for Rishabh's CV. </a></p>
 			 </p>
 
 			<p align="center">
@@ -47,7 +47,7 @@
 			<p align="center"><img class = "headshot" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/headhot2022.jpg"
 			alt = "Headshot"></>
 
-			<p class = "bioside"> Rishabh Datta is a PhD candidate in the department of Mechanical Engineering at Massachusetts Institute of Technology. As a research assistant at MIT's Plasma Science & Fusion Center, Rishabh works on high-energy-density pulsed-power driven plasmas. His areas of focus are magnetized shocks and radiatively-cooled magnetic reconnection. <a href="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/202402_CV.pdf"> Click here for Rishabh's CV. </a></p>
+			<p class = "bioside"> Rishabh Datta is a PhD candidate in the department of Mechanical Engineering at Massachusetts Institute of Technology. As a research assistant at MIT's Plasma Science & Fusion Center, Rishabh works on high-energy-density pulsed-power driven plasmas. His areas of focus are magnetized shocks and radiatively-cooled magnetic reconnection. <a href="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/CV.pdf" target="_blank"> Click here for Rishabh's CV. </a></p>
 		
 
 			<p>
@@ -63,6 +63,12 @@
 		
 		<div class = "Project1">
 			<h1> News </h1>
+			<p> <b>May 2024 (News):</b>
+				</a>  My work was featured as an AIP (American Institute of Physics) Science Highlight (Scilight).</u> 
+			<a href="doi.org/10.1063/10.0026052"> [link] </a>
+			<p> <b>May 2024 (Paper):</b>
+				</a>  My paper on the experimental details of radiatively cooled magnetic reconnection on Z now published as <u>Editor's Pick in Physics of Plasmas.</u> 
+			<a href="https://doi.org/10.1063/5.0201683"> [link] </a>
 			<p> <b>April 2024 (News):</b>
 				</a>  My work on radiatively cooled magnetic reconnection was featured as a Research Highlight in <u>Nature Astronomy.</u>
 			<a href="https://www.nature.com/articles/s41550-024-02264-1"> [link] </a>
