--- a/publications.html
+++ b/publications.html
@@ -19,12 +19,12 @@
 
 		<div class = "top">
 			<h4> RISHABH DATTA </h4>
-			<p class= "menu">Navigation: <a href="https://rdatta31.github.io/">News</a>|
+			<p class= "menu">Navigation: <a href="https://rdatta31.github.io/">News</a> |
 			  <a href="https://rdatta31.github.io/publications.html">Publications</a> |
 			  <a href="https://rdatta31.github.io/projects.html">Projects</a> </p>
 			
 			
-			<p class = "bio"> Rishabh Datta is a PhD candidate in the department of Mechanical Engineering at Massachusetts Institute of Technology. As a research assistant at MIT's Plasma Science & Fusion Center, Rishabh works on high-energy-density pulsed-power driven plasmas. His areas of focus are magnetized shocks and radiatively-cooled magnetic reconnection. <a href="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/202402_CV.pdf"> Click here for Rishabh's CV. </a>
+			<p class = "bio"> Rishabh Datta is a PhD candidate in the department of Mechanical Engineering at Massachusetts Institute of Technology. As a research assistant at MIT's Plasma Science & Fusion Center, Rishabh works on high-energy-density pulsed-power driven plasmas. His areas of focus are magnetized shocks and radiatively-cooled magnetic reconnection. <a href="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/CV.pdf" target="_blank"> Click here for Rishabh's CV. </a>
 			 </p>
 
 			<p align="center">
@@ -48,7 +48,7 @@
 			<p align="center"><img class = "headshot" src="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/headhot2022.jpg"
 			alt = "Headshot"></>
 
-			<p class ="bioside"> Rishabh Datta is a PhD candidate in the department of Mechanical Engineering at Massachusetts Institute of Technology. As a research assistant at MIT's Plasma Science & Fusion Center, Rishabh works on high-energy-density pulsed-power driven plasmas. His areas of focus are magnetized shocks and radiatively-cooled magnetic reconnection. <a href="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/202402_CV.pdf"> Click here for Rishabh's CV. </a> </p>
+			<p class ="bioside"> Rishabh Datta is a PhD candidate in the department of Mechanical Engineering at Massachusetts Institute of Technology. As a research assistant at MIT's Plasma Science & Fusion Center, Rishabh works on high-energy-density pulsed-power driven plasmas. His areas of focus are magnetized shocks and radiatively-cooled magnetic reconnection. <a href="https://raw.githubusercontent.com/rdatta31/rdatta31.github.io/master/CV.pdf" target="_blank"> Click here for Rishabh's CV. </a> </p>
 		
 
 			<p>
@@ -66,7 +66,7 @@
 			<h1>Publications</h1>
 			<p> [8] <b> R. Datta </b>, K. Chandler, C. E. Myers, J. P. Chittenden, A. J. Crilly, C. Aragon, D. J. Ampleford,  J. T. Banasek, A. Edens, W. R. Fox, S. B. Hansen, E. C. Harding, C. A. Jennings, H. Ji, C. C. Kuranz, S. V. Lebedev, Q. Looker, S. G. Patel, A. Porwitzky, G. A. Shipley, D. A. Uzdensky, D. A. Yager-Elorriaga, J.D. Hare (2024).  “Plasmoid Formation and Strong Radiative Cooling in a Driven Magnetic Reconnection Experiment.” <a href="https://doi.org/10.1103/physrevlett.132.155102">Physical Review Letters. Editor’s Suggestion. </a> </p>
 			
-			<p>[7] <b> R. Datta </b>, K. Chandler, C. E. Myers, J. P. Chittenden, A. J. Crilly, C. Aragon, D. J. Ampleford,  J. T. Banasek, A. Edens, W. R. Fox, S. B. Hansen, E. C. Harding, C. A. Jennings, H. Ji, C. C. Kuranz, S. V. Lebedev, Q. Looker, S. G. Patel, A. Porwitzky, G. A. Shipley, D. A. Uzdensky, D. A. Yager-Elorriaga, J.D. Hare (2024).  “Radiatively cooled magnetic reconnection experiments driven by pulsed power.” <a href="https://doi.org/10.48550/arXiv.2401.17923"> Physics of Plasmas. Invited Paper. (In Review). </a> </p>
+			<p>[7] <b> R. Datta </b>, K. Chandler, C. E. Myers, J. P. Chittenden, A. J. Crilly, C. Aragon, D. J. Ampleford,  J. T. Banasek, A. Edens, W. R. Fox, S. B. Hansen, E. C. Harding, C. A. Jennings, H. Ji, C. C. Kuranz, S. V. Lebedev, Q. Looker, S. G. Patel, A. Porwitzky, G. A. Shipley, D. A. Uzdensky, D. A. Yager-Elorriaga, J.D. Hare (2024).  “Radiatively cooled magnetic reconnection experiments driven by pulsed power.” <a href="https://doi.org/10.1063/5.0201683"> Physics of Plasmas. Invited Paper. </a> </p>
 			
 			<p> [6] <b> R. Datta </b>, A. J. Crilly, J. P. Chittenden, S. Chowdhry, K. Chandler, N. Chaturvedi, C. E. Myers, W. R. Fox, S. B. Hansen, C. A. Jennings, H. Ji, C. C. Kuranz, S. V. Lebedev, D. A. Uzdensky, J. D. Hare (2024). “Simulations of radiatively cooled magnetic reconnection driven by pulsed-power.” <a href="https://doi.org/10.48550/arXiv.2401.01795"> Journal of Plasma Physics (Accepted). </a> </p>
 			
